tests/NormalTests/paczka1/fuzzy1/91523833.err
Error in line 8: NpeyISpnkK A741 80,9
Error in line 7: edrHix A741 44,4
Error in line 16: NpeyISpnkK S682 24,7
Error in line 17: P5kPKB A634 58,5
Error in line 22: J2dwgQMh4 A114 29,0
Error in line 34: P5kPKB A634 9,3
